// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImagePreviewTile > renders the default story with its image 1`] = `
<div>
  <div
    class="MediaPreviewTile-module_tile"
  >
    <div
      class="MediaPreviewComponents-module_image MediaPreviewComponents-module_bannerImage"
    >
      <img
        alt=""
        src="/static/wideImage.png"
      />
    </div>
    <div
      class="MediaPreviewTile-module_below"
    >
      <div
        class="MediaPreviewComponents-module_leftGroup"
      >
        <div
          class="MediaPreviewComponents-module_icon"
        >
          <button
            aria-label="View file"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              style="color: rgb(66, 0, 166);"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 18h6q.424 0 .713-.288A.97.97 0 0 0 16 17a.97.97 0 0 0-.287-.712A.97.97 0 0 0 15 16H9a.97.97 0 0 0-.713.288A.97.97 0 0 0 8 17q0 .424.287.712Q8.576 18 9 18m0-4h6q.424 0 .713-.287A.97.97 0 0 0 16 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 15 12H9a.97.97 0 0 0-.713.287A.97.97 0 0 0 8 13q0 .424.287.713Q8.576 14 9 14m-3 8q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V4q0-.824.588-1.412A1.93 1.93 0 0 1 6 2h7.175a1.98 1.98 0 0 1 1.4.575l4.85 4.85q.275.275.425.638.15.361.15.762V20q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zm7-14V4H6v16h12V9h-4a.97.97 0 0 1-.713-.287A.97.97 0 0 1 13 8"
              />
            </svg>
          </button>
        </div>
        <div
          class="MediaPreviewComponents-module_textContent"
        >
          <div
            class="MediaPreviewComponents-module_header"
          >
            annual-report.pdf
          </div>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkedText-module_container MediaPreviewComponents-module_body"
          >
            2.3 MB
          </p>
        </div>
      </div>
      <div
        class="MediaPreviewComponents-module_buttonGroup"
      >
        <button
          aria-label="Expand"
          class="MediaPreviewComponents-module_button"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 3.997a1 1 0 0 0-.29-.702l-.005-.004A1 1 0 0 0 20 3h-8a1 1 0 1 0 0 2h5.586L5 17.586V12a1 1 0 1 0-2 0v8.003a1 1 0 0 0 .29.702l.005.004c.18.18.43.291.705.291h8a1 1 0 1 0 0-2H6.414L19 6.414V12a1 1 0 1 0 2 0z"
            />
          </svg>
        </button>
        <button
          aria-label="Download"
          class="MediaPreviewComponents-module_button"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-3.6-3.6a.95.95 0 0 1-.275-.7q0-.425.275-.7.274-.275.712-.288t.713.263L11 12.15V5q0-.424.287-.713A.97.97 0 0 1 12 4q.424 0 .713.287Q13 4.576 13 5v7.15l1.875-1.875q.274-.274.713-.263.437.014.712.288a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-3.6 3.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063M6 20q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 18v-2q0-.424.287-.713A.97.97 0 0 1 5 15q.424 0 .713.287Q6 15.576 6 16v2h12v-2q0-.424.288-.713A.97.97 0 0 1 19 15q.424 0 .712.287.288.288.288.713v2q0 .824-.587 1.413A1.93 1.93 0 0 1 18 20z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MediaPreviewTile > renders the icon and text content without any media above 1`] = `
<div>
  <div
    class="MediaPreviewTile-module_tile"
  >
    <div
      class="MediaPreviewTile-module_below"
    >
      <div
        class="MediaPreviewComponents-module_leftGroup"
      >
        <div
          class="MediaPreviewComponents-module_icon"
        >
          <span
            data-testid="icon"
            style="color: rgb(66, 0, 166);"
          >
            icon
          </span>
        </div>
        <div
          class="MediaPreviewComponents-module_textContent"
        >
          <div
            class="MediaPreviewComponents-module_header"
          >
            annual-report.pdf
          </div>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkedText-module_container MediaPreviewComponents-module_body"
          >
            2.3 MB
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextPreviewTile > renders the default story 1`] = `
<div>
  <div
    class="MediaPreviewTile-module_tile"
  >
    <div
      class="MediaPreviewTile-module_below"
    >
      <div
        class="MediaPreviewComponents-module_leftGroup"
      >
        <div
          class="MediaPreviewComponents-module_icon"
        >
          <button
            aria-label="View file"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              style="color: rgb(66, 0, 166);"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 18h6q.424 0 .713-.288A.97.97 0 0 0 16 17a.97.97 0 0 0-.287-.712A.97.97 0 0 0 15 16H9a.97.97 0 0 0-.713.288A.97.97 0 0 0 8 17q0 .424.287.712Q8.576 18 9 18m0-4h6q.424 0 .713-.287A.97.97 0 0 0 16 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 15 12H9a.97.97 0 0 0-.713.287A.97.97 0 0 0 8 13q0 .424.287.713Q8.576 14 9 14m-3 8q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V4q0-.824.588-1.412A1.93 1.93 0 0 1 6 2h7.175a1.98 1.98 0 0 1 1.4.575l4.85 4.85q.275.275.425.638.15.361.15.762V20q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zm7-14V4H6v16h12V9h-4a.97.97 0 0 1-.713-.287A.97.97 0 0 1 13 8"
              />
            </svg>
          </button>
        </div>
        <div
          class="MediaPreviewComponents-module_textContent"
        >
          <div
            class="MediaPreviewComponents-module_header"
          >
            annual-report.pdf
          </div>
          <p
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 LinkedText-module_container MediaPreviewComponents-module_body"
          >
            2.3 MB
          </p>
        </div>
      </div>
      <div
        class="MediaPreviewComponents-module_buttonGroup"
      >
        <button
          aria-label="Expand"
          class="MediaPreviewComponents-module_button"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 3.997a1 1 0 0 0-.29-.702l-.005-.004A1 1 0 0 0 20 3h-8a1 1 0 1 0 0 2h5.586L5 17.586V12a1 1 0 1 0-2 0v8.003a1 1 0 0 0 .29.702l.005.004c.18.18.43.291.705.291h8a1 1 0 1 0 0-2H6.414L19 6.414V12a1 1 0 1 0 2 0z"
            />
          </svg>
        </button>
        <button
          aria-label="Download"
          class="MediaPreviewComponents-module_button"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-3.6-3.6a.95.95 0 0 1-.275-.7q0-.425.275-.7.274-.275.712-.288t.713.263L11 12.15V5q0-.424.287-.713A.97.97 0 0 1 12 4q.424 0 .713.287Q13 4.576 13 5v7.15l1.875-1.875q.274-.274.713-.263.437.014.712.288a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-3.6 3.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063M6 20q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 18v-2q0-.424.287-.713A.97.97 0 0 1 5 15q.424 0 .713.287Q6 15.576 6 16v2h12v-2q0-.424.288-.713A.97.97 0 0 1 19 15q.424 0 .712.287.288.288.288.713v2q0 .824-.587 1.413A1.93 1.93 0 0 1 18 20z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
